--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Jon Barron</title>
+  <title>Reinhard Grassmann</title>
   
   <meta name="author" content="Reinhard M. Grassmann">
   <meta name="viewport" content="width=device-width, initial-scale=1">
