include GrassmannBurgner-Kahrs_et_al_IROS_2022

--- a/index.html
+++ b/index.html
@@ -238,21 +238,30 @@
             </td>
           </tr> 
 -->
-
+	<!--GrassmannBurgner-Kahrs_et_al_IROS_2022-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/clean_promo.jpg" alt="clean-usnob" width="160" height="160">
+              <img src="images/2022_IROS_setup.png" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
-                <papertitle>Cleaning the USNO-B Catalog Through Automatic Detection of Optical Artifacts</papertitle>
+              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">
+                <papertitle>A Dataset and Benchmark for Learning the Kinematics of Concentric Tube Continuum Robots</papertitle>
               </a>
               <br>
-              <strong>Jonathan T. Barron</strong>, <a href="http://stumm.ca/">Christopher Stumm</a>, <a href="http://cosmo.nyu.edu/hogg/">David W. Hogg</a>, <a href="http://www.astro.princeton.edu/~dstn/">Dustin Lang</a>, <a href="http://cs.nyu.edu/~roweis/">Sam Roweis</a>
+		    <strong>Reinhard M. Grassmann</strong>, 
+		    <a href="https://ryan-zeyuan-chen.github.io/">Ryan Zeyuan Chen</a>, 
+		    <a href="https://scholar.google.ca/citations?user=0h1At3cAAAAJ">Nan Liang</a>, 
+		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
               <br>
-              <em>The Astronomical Journal</em>, 135, 2008
-              <p>We use computer vision techniques to identify and remove diffraction spikes and reflection halos in the USNO-B Catalog.</p>
-              <p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>
+              <em>IEEE/RAS IROS</em>, 2022
+              <p>We provide the first public dataset for a three-tube CTCR to democrotize research on learning-based and physics-based modelling of the kinematics.</p>
+              <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
+	      <br>
+              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>             
+		/
+              <a href="https://github.com/reinhardgrassmann/reinhardgrassmann.github.io/blob/master/data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
+              /
+              <a href="https://github.com/ContinuumRoboticsLab/CRL-Dataset-CTCR-Pose">GitHub</a>
             </td>
           </tr>
 		
