--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML>
+
+var defaultLink = "https://reinhardgrassmann.github.io/"
+
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <title>Reinhard Grassmann</title>
@@ -262,6 +265,34 @@
               <a href="https://github.com/reinhardgrassmann/reinhardgrassmann.github.io/blob/master/data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
               /
               <a href="https://github.com/ContinuumRoboticsLab/CRL-Dataset-CTCR-Pose">GitHub</a>
+            </td>
+          </tr>
+        </tbody></table>
+	      
+	<!--GrassmannModesBurgner-Kahrs_et_al_IROS_2018-->
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/2022_IROS_setup.png" alt="clean-usnob" width="160" height="119">
+            </td>
+            <td width="100%" valign="middle">
+              <a href=defaultLink>
+                <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
+              </a>
+              <br>
+		    <strong>Reinhard M. Grassmann</strong>, 
+		    <a>Vincent Modes</a>, 
+		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+              <br>
+              <em>IEEE/RSJ IROS</em>, 2018
+              <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric tube continuum robots from real robot measurements.</p>
+	      <br>
+<!--
+              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+		/
+-->           
+		<a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>         
+		/
+              <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
             </td>
           </tr>
         </tbody></table>
