--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ var defaultLink = "https://reinhardgrassmann.github.io/"
 	      <br>
               <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>             
 		/
-              <a href="https://github.com/reinhardgrassmann/reinhardgrassmann.github.io/blob/master/data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
+              <a href="data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
               /
               <a href="https://github.com/ContinuumRoboticsLab/CRL-Dataset-CTCR-Pose">GitHub</a>
             </td>
