update image for IROS 2018

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 	<!--GrassmannModesBurgner-Kahrs_et_al_IROS_2018-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2022_IROS_setup.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
               <a href="https://reinhardgrassmann.github.io/">
