--- a/index.html
+++ b/index.html
@@ -267,31 +267,30 @@
           </tr>
 
 	<!--GrassmannBurgner-Kahrs_et_al_Frontiers_2022-->
-<!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2022_dof.jpg" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
-              <a href="https://reinhardgrassmann.github.io/">
-                <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
+              <a href="https://doi.org/10.3389/frobt.2022.873446">
+                <papertitle>FAS -- A Fully Actuated Segment for Tendon-Driven Continuum Robots</papertitle>
               </a>
               <br>
 		    <strong>Reinhard M. Grassmann</strong>, 
-		    <a>Vincent Modes</a>, 
+		    <a>Priyanka Rao</a>, 
+		    <a>Quentin Peyron</a>, 
 		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
               <br>
-              <em>IEEE/RSJ IROS</em>, 2018
-              <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric tube continuum robots from real robot measurements.</p>
+              <em>Frontiers in Robotics and AI</em>, 2022
+              <p>We propose a segment design that combines two distinct characteristics of tendon-driven continuum robots, i.e. variable length and non-straight tendon routing, into a single segment by enabling rotation of its backbone.</p>
 	      <br>
-              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+              <a href="https://www.frontiersin.org/articles/10.3389/frobt.2022.873446/pdf">paper</a>        
 		/
-		<a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>         
+		<a href="https://doi.org/10.3389/frobt.2022.873446">Front. Robot. AI</a>         
 		/
-              <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
+              <a href="data/GrassmannBurgner-Kahrs_et_al_Frontiers_2022.bib">BibTex</a>
             </td>
           </tr>
--->
 			
 	<!--LianBurgner-Kahrs_et_al_ICRA_2021-->
 <!--
