--- a/index.html
+++ b/index.html
@@ -293,31 +293,30 @@
           </tr>
 			
 	<!--LianBurgner-Kahrs_et_al_ICRA_2021-->
-<!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2020_Image2joint.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
-              <a href="https://reinhardgrassmann.github.io/">
-                <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
+              <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">
+                <papertitle>Learning-based Inverse Kinematics from Shape as Input for Concentric Tube Continuum Robots</papertitle>
               </a>
               <br>
+		    <a>Nan Liang</a>
 		    <strong>Reinhard M. Grassmann</strong>, 
-		    <a>Vincent Modes</a>, 
+		    <a>Sven Lilge</a>, 
 		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
               <br>
-              <em>IEEE/RSJ IROS</em>, 2018
-              <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric tube continuum robots from real robot measurements.</p>
+              <em>IEEE ICRA</em>, 2021
+              <p>We introduce methodologies to compute the inverse kinematics for concentric tube continuum robots from a desired shape as input.</p>
 	      <br>
-              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+              <!--<a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+		/-->
+		<a href="https://doi.org/10.1109/ICRA48506.2021.9562085">IEEE Xplore</a>         
 		/
-		<a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>         
-		/
-              <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
+              <a href="data/LianBurgner-Kahrs_et_al_ICRA_2021.bib">BibTex</a>
             </td>
           </tr>
--->
 		
 	<!--GrassmannBurgner-Kahrs_et_al_RSS_WS_2020-->
 <!--
