--- a/index.html
+++ b/index.html
@@ -319,31 +319,34 @@
           </tr>
 		
 	<!--GrassmannBurgner-Kahrs_et_al_RSS_WS_2020-->
-<!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2020_PrototypeDevelopmentSystemThinking.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
-              <a href="https://reinhardgrassmann.github.io/">
-                <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
+              <a href="https://openreview.net/forum?id=bYLFxFQPFtX">
+                <papertitle>CTCR Prototype Development: An Obstacle in the Research Community?</papertitle>
               </a>
               <br>
 		    <strong>Reinhard M. Grassmann</strong>, 
-		    <a>Vincent Modes</a>, 
+		    <a>Sven Lilge</a>, 
+		    <a>Phuong Le</a>, 
 		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
               <br>
-              <em>IEEE/RSJ IROS</em>, 2018
-              <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric tube continuum robots from real robot measurements.</p>
+              <em>IFRR RSS Workshop on Retrospectives in Robotics</em>, 2020
+              <p>we discuss the impact of the current habit of developing a variety of different prototypes on the emergence of a ubiquitous robotic platform.</p>
 	      <br>
-              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+              <a href="https://openreview.net/pdf?id=bYLFxFQPFtX">paper</a>        
 		/
-		<a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>         
+		<a href="https://openreview.net/forum?id=bYLFxFQPFtX">OpenReview</a>         
 		/
-              <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
+		<a href="https://sites.google.com/stanford.edu/roboticsretrospectives/home">RSS Workshop: Robotics Retrospectives</a>         
+		/
+		<a href="https://www.youtube.com/watch?v=H3UjwT7rNns">YouTube</a>         
+		/
+              <a href="data/GrassmannBurgner-Kahrs_et_al_RSS_WS_2020.bib">BibTex</a>
             </td>
           </tr>
--->
 		
 	<!--GrassmannBurgner-Kahrs_RA-L_2019-->
 <!--
