--- a/index.html
+++ b/index.html
@@ -349,31 +349,29 @@
           </tr>
 		
 	<!--GrassmannBurgner-Kahrs_RA-L_2019-->
-<!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2019_TrajectoryGeneration.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
-              <a href="https://reinhardgrassmann.github.io/">
-                <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
+              <a href="https://doi.org/10.1109/LRA.2019.2931133">
+                <papertitle>Quaternion-Based Smooth Trajectory Generator for Via Poses in SE(3) Considering Kinematic Limits in Cartesian Space</papertitle>
               </a>
               <br>
 		    <strong>Reinhard M. Grassmann</strong>, 
-		    <a>Vincent Modes</a>, 
 		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
               <br>
-              <em>IEEE/RSJ IROS</em>, 2018
-              <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric tube continuum robots from real robot measurements.</p>
+              <em>IEEE RA-L</em>, 2019
+              <p>We address the problem of generating a singularity-free trajectory for multiple via poses in SE(3), while complying with the requirement of C4 continuity.</p>
 	      <br>
+		   <!--
               <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+		/-->
+		<a href="https://doi.org/10.1109/LRA.2019.2931133">IEEE Xplore</a>         
 		/
-		<a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>         
-		/
-              <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
+              <a href="data/GrassmannBurgner-Kahrs_RA-L_2019.bib">BibTex</a>
             </td>
           </tr>
--->
 		
 	<!--GrassmannModesBurgner-Kahrs_RSS_2019-->
 <!--
