--- a/index.html
+++ b/index.html
@@ -374,31 +374,28 @@
           </tr>
 		
 	<!--GrassmannModesBurgner-Kahrs_RSS_2019-->
-<!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2019_RotationErrorComparision.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
               <a href="https://reinhardgrassmann.github.io/">
-                <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
+                <papertitle>On the Merits of Joint Space and Orientation Representations in Learning the Forward Kinematics in SE(3)</papertitle>
               </a>
               <br>
 		    <strong>Reinhard M. Grassmann</strong>, 
-		    <a>Vincent Modes</a>, 
 		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
               <br>
-              <em>IEEE/RSJ IROS</em>, 2018
-              <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric tube continuum robots from real robot measurements.</p>
+              <em>IFRR RSS</em>, 2019
+              <p>We investigate the influence of different joint space and orientation representations on the approximation of the forward kinematics.</p>
 	      <br>
-              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+              <a href="http://roboticsproceedings.org/rss15/p17.pdf">paper</a>  
 		/
-		<a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>         
+              <a href="http://roboticsproceedings.org/rss15/p17.html">RSS XV</a>  
 		/
-              <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
+              <a href="data/GrassmannModesBurgner-Kahrs_RSS_2019.bib">BibTex</a>
             </td>
           </tr>
--->  
 		
 	<!--GrassmannJohannsmeierHaddadin_IROS_2018-->
 <!--
