--- a/index.html
+++ b/index.html
@@ -398,31 +398,27 @@
           </tr>
 		
 	<!--GrassmannJohannsmeierHaddadin_IROS_2018-->
-<!--
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2018_PathScheduling.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
               <a href="https://reinhardgrassmann.github.io/">
-                <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
+                <papertitle>Smooth Point-to-Point Trajectory Planning in SE(3) with Self-Collision and Joint Constraints Avoidance</papertitle>
               </a>
               <br>
 		    <strong>Reinhard M. Grassmann</strong>, 
-		    <a>Vincent Modes</a>, 
-		    <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
+		    <a>Lars Johannsmeier</a>, 
+		    <a>Sami Haddadin</a>
               <br>
               <em>IEEE/RSJ IROS</em>, 2018
-              <p>We introduce a joint descritpion to learn the forward and inverse kinematics for conentric tube continuum robots from real robot measurements.</p>
+              <p>We introduce a point-to-point trajectory planner for serial robotic structures that combines the ability to avoid self-collisions and to respect motion constraints, while complying with the requirement of being C4 continuous.</p>
 	      <br>
-              <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>        
+		<a href="https://doi.org/10.1109/IROS.2018.8594339">IEEE Xplore</a>         
 		/
-		<a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>         
-		/
-              <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
+              <a href="data/GrassmannJohannsmeierHaddadin_IROS_2018.bib">BibTex</a>
             </td>
           </tr>
--->
 		
 	<!--GrassmannModesBurgner-Kahrs_et_al_IROS_2018-->
           <tr>
