--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/ReinhardGrassmann_bw_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/ReinhardGrassmann_bw_square.jpeg" class="hoverZoomLink"></a>
+              <a href="images/ReinhardGrassmann_bw_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/ReinhardGrassmann_bw_circle.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
