--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>
 		      I am a Ph.D. Candidate with the Department of Computer Science and a research assistant with the <a href="https://crl.utm.utoronto.ca/">Continuum Robotics Laboratory</a> at the University of Toronto, Canada.
 		      I work on continuum robotics and machine learning.
-		      Before all that, I completed a B.Sc. and a M.Sc. Degree in Mechatronic at the Leibniz University Hannover, Germany in 2016 and 2018, respectively.
+		      Before all that, I completed a B.Sc. and a M.Sc. Degree in Mechatronics at the <a href="https://www.uni-hannover.de/en/">Leibniz University Hannover</a>, Germany in 2016 and 2018, respectively.
 		      From 2018 to 2019 I worked as a research assistant at the Lehrstuhl fuer Kontinuumsrobotik at the Leibniz University Hannover.
               </p>
 <!--
