--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 		<a href="https://www.youtube.com/watch?v=H3UjwT7rNns">YouTube</a>         
 		/
               <a href="data/GrassmannBurgner-Kahrs_et_al_RSS_WS_2020.bib">BibTex</a>
-              <p>we discuss the impact of the current habit of developing a variety of different prototypes on the emergence of a ubiquitous robotic platform.</p>
+              <p>We discuss the impact of the current habit of developing a variety of different prototypes on the emergence of a ubiquitous robotic platform.</p>
             </td>
           </tr>
 		
