added link to Semantic Scholar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a href="data/bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=6nbw0sgAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/reinhardgrassmann/">Github</a>
+		<a href="https://www.semanticscholar.org/author/R.-Grassmann/65752777">Semantic Scholar</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
