corrected links for iROS2018a and IROS2018b

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
               <img src="images/2018_PathScheduling.png" alt="clean-usnob" width="160" height="104">
             </td>
             <td width="100%" valign="middle">
-              <a href="https://reinhardgrassmann.github.io/">
+              <a href="https://doi.org/10.1109/IROS.2018.8594339">
                 <papertitle>Smooth Point-to-Point Trajectory Planning in SE(3) with Self-Collision and Joint Constraints Avoidance</papertitle>
               </a>
               <br>
@@ -429,7 +429,7 @@
               <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
-              <a href="https://reinhardgrassmann.github.io/">
+              <a href="https://doi.org/10.1109/IROS.2018.8594451">
                 <papertitle>Learning the Forward and Inverse Kinematics of a 6-DOF Concentric Tube Continuum Robot in SE(3)</papertitle>
               </a>
               <br>
