--- a/index.html
+++ b/index.html
@@ -869,6 +869,20 @@
           </tr>
         </tbody></table>
 -->
+		
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px">
+              <br>
+              <p style="text-align:right;font-size:small;">
+		The page was designed to last. See the [Manifesto for Preserving Content on the Web](https://jeffhuang.com/designed_to_last/) by Jeff Huang for more information.
+                <br>
+               Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website.
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+		
       </td>
     </tr>
   </table>
