Images are linked to compressed versions

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 	<!--GrassmannBurgner-Kahrs_et_al_IROS_2022-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2022_IROS_setup.png" alt="clean-usnob" width="160" height="109">
+              <img src="images/2022_IROS_setup_tinywow.png" alt="clean-usnob" width="160" height="109">
             </td>
             <td width="100%" valign="middle">
               <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">
@@ -272,7 +272,7 @@
 	<!--GrassmannBurgner-Kahrs_et_al_Frontiers_2022-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2022_dof.jpg" alt="clean-usnob" width="160" height="156">
+              <img src="images/2022_dof_tinywow.jpg" alt="clean-usnob" width="160" height="156">
             </td>
             <td width="100%" valign="middle">
               <a href="https://doi.org/10.3389/frobt.2022.873446">
@@ -298,7 +298,7 @@
 	<!--LianBurgner-Kahrs_et_al_ICRA_2021-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2020_Image2joint.png" alt="clean-usnob" width="160" height="92">
+              <img src="images/2020_Image2joint_tinywow.png" alt="clean-usnob" width="160" height="92">
             </td>
             <td width="100%" valign="middle">
               <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">
@@ -325,7 +325,7 @@
 	<!--GrassmannBurgner-Kahrs_et_al_RSS_WS_2020-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2020_PrototypeDevelopmentSystemThinking.png" alt="clean-usnob" width="160" height="62">
+              <img src="images/2020_PrototypeDevelopmentSystemThinking_tinywow.png" alt="clean-usnob" width="160" height="62">
             </td>
             <td width="100%" valign="middle">
               <a href="https://openreview.net/forum?id=bYLFxFQPFtX">
@@ -355,7 +355,7 @@
 	<!--GrassmannBurgner-Kahrs_RA-L_2019-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2019_TrajectoryGeneration.png" alt="clean-usnob" width="160" height="180">
+              <img src="images/2019_TrajectoryGeneration_tinywow.png" alt="clean-usnob" width="160" height="180">
             </td>
             <td width="100%" valign="middle">
               <a href="https://doi.org/10.1109/LRA.2019.2931133">
@@ -380,7 +380,7 @@
 	<!--GrassmannBurgner-Kahrs_RSS_2019-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2019_RotationErrorComparision.png" alt="clean-usnob" width="160" height="137">
+              <img src="images/2019_RotationErrorComparision_tinywow.png" alt="clean-usnob" width="160" height="137">
             </td>
             <td width="100%" valign="middle">
               <a href="https://reinhardgrassmann.github.io/">
@@ -404,7 +404,7 @@
 	<!--GrassmannJohannsmeierHaddadin_IROS_2018-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_PathScheduling.png" alt="clean-usnob" width="160" height="104">
+              <img src="images/2018_PathScheduling_tinywow.png" alt="clean-usnob" width="160" height="104">
             </td>
             <td width="100%" valign="middle">
               <a href="https://doi.org/10.1109/IROS.2018.8594339">
@@ -427,7 +427,7 @@
 	<!--GrassmannModesBurgner-Kahrs_et_al_IROS_2018-->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/2018_IROS_PosError.png" alt="clean-usnob" width="160" height="119">
+              <img src="images/2018_IROS_PosError_tinywow.png" alt="clean-usnob" width="160" height="119">
             </td>
             <td width="100%" valign="middle">
               <a href="https://doi.org/10.1109/IROS.2018.8594451">
