fixed format for the footer

--- a/index.html
+++ b/index.html
@@ -875,8 +875,8 @@
           <tr>
             <td style="padding:0px">
               <br>
-              <p style="text-align:right;font-size:small;">
-		The page was designed to last. See the [Manifesto for Preserving Content on the Web](https://jeffhuang.com/designed_to_last/) by Jeff Huang for more information.
+              <p style="text-align:left;font-size:small;">
+		The page was designed to last. See the <a href="https://jeffhuang.com/designed_to_last/">Manifesto for Preserving Content on the Web</a> by Jeff Huang for more information.
                 <br>
                Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website.
               </p>
