--- a/index.html
+++ b/index.html
@@ -452,6 +452,55 @@
           </tr>
 
 
+	<!-- THESES -->
+	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Theses</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+	<!-- Masterarbeit -->			
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/Thesis_MA_tinywow.png"></td>
+            <td width="75%" valign="center">
+              <p>Artificial Neural Networks for Learning Forward and Inverse Kinematics of Tubular Continuum Robots</p>
+              <br>
+              <p>Supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof. Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+              <br>
+              <p>Master’s thesis</p>
+            </td>
+          </tr>
+	<!-- Bachelorarbeit -->			
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/Thesis_BA_tinywow.png" alt="cs188">
+            </td>
+            <td width="75%" valign="center">
+              <p>Generating Smooth Trajectories for Obstacle Avoidance via Quaternions in Cartesian Space</p>
+              <br>
+              <p>Supervised by <a href="https://en.wikipedia.org/wiki/Sami_Haddadin">Prof. Dr.-Ing. Sami Haddadin</a></p>
+              <br>
+              <p>Bachelor’s thesis</p>
+            </td>
+          </tr>
+	<!-- Studienarbeit -->			
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+		<img src="images/Thesis_SA_tinywow.png" alt="cs188">
+            </td>
+            <td width="75%" valign="middle">
+              <p>Data Fusion Using an Extended Kalman Filter for an Optically Navigated Light Weight Robot</p>
+              <br>
+              <p>Supervised by Prof. Dr.-Ing. Tobias Ortmaier</p>
+              <br>
+              <p>Project thesis</p>
+            </td>
+          </tr>
+					
+        </tbody></table>	
+		
 <!--					
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
