Fixed format for theses section

--- a/index.html
+++ b/index.html
@@ -462,8 +462,10 @@
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
 	<!-- Masterarbeit -->			
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/Thesis_MA_tinywow.png"></td>
+	<tr>
+		<td style="padding:20px;width:25%;vertical-align:middle">
+		<img src="images/Thesis_MA_tinywow.png"  alt="clean-usnob" width="160" height="114">
+	</td>
             <td width="75%" valign="center">
               <p>Artificial Neural Networks for Learning Forward and Inverse Kinematics of Tubular Continuum Robots</p>
               <br>
@@ -475,7 +477,7 @@
 	<!-- Bachelorarbeit -->			
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/Thesis_BA_tinywow.png" alt="cs188">
+              <img src="images/Thesis_BA_tinywow.png"  alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="center">
               <p>Generating Smooth Trajectories for Obstacle Avoidance via Quaternions in Cartesian Space</p>
@@ -488,7 +490,7 @@
 	<!-- Studienarbeit -->			
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-		<img src="images/Thesis_SA_tinywow.png" alt="cs188">
+		<img src="images/Thesis_SA_tinywow.png" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <p>Data Fusion Using an Extended Kalman Filter for an Optically Navigated Light Weight Robot</p>
