--- a/index.html
+++ b/index.html
@@ -453,7 +453,8 @@
 
 
 	<!-- THESES -->
-	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+	<!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody> -->
           <tr>
             <td>
               <heading>Theses</heading>
