--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
 		<td style="padding:20px;width:25%;vertical-align:middle">
 		<img src="images/Thesis_MA_tinywow.png"  alt="clean-usnob" width="160" height="114">
 	</td>
-            <td width="75%" valign="center">
-              <p>Artificial Neural Networks for Learning Forward and Inverse Kinematics of Tubular Continuum Robots</p>
+            <td width="100%" valign="middle">
+              <p><i>Artificial Neural Networks for Learning Forward and Inverse Kinematics of Tubular Continuum Robots</i></p>
               <p>Supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof. Dr.-Ing. Jessica Burgner-Kahrs</a></p>
               <p>Master’s thesis</p>
             </td>
@@ -483,8 +483,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/Thesis_BA_tinywow.png"  alt="clean-usnob" width="160" height="160">
             </td>
-            <td width="75%" valign="center">
-              <p>Generating Smooth Trajectories for Obstacle Avoidance via Quaternions in Cartesian Space</p>
+            <td width="100%" valign="middle">
+              <p><i>Generating Smooth Trajectories for Obstacle Avoidance via Quaternions in Cartesian Space</i></p>
               <p>Supervised by <a href="https://en.wikipedia.org/wiki/Sami_Haddadin">Prof. Dr.-Ing. Sami Haddadin</a></p>
               <p>Bachelor’s thesis</p>
             </td>
@@ -494,8 +494,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
 		<img src="images/Thesis_SA_tinywow.png" alt="clean-usnob" width="160" height="160">
             </td>
-            <td width="75%" valign="middle">
-              <p>Data Fusion Using an Extended Kalman Filter for an Optically Navigated Light Weight Robot</p>
+            <td width="100%" valign="middle">
+              <p><i>Data Fusion Using an Extended Kalman Filter for an Optically Navigated Light Weight Robot</i></p>
               <p>Supervised by Prof. Dr.-Ing. Tobias Ortmaier</p>
               <p>Project thesis</p>
             </td>
