--- a/index.html
+++ b/index.html
@@ -478,6 +478,17 @@
               <p>Master’s thesis</p>
             </td>
           </tr>
+	<!-- Masterarbeit -->
+	<tr>
+		<td style="padding:20px;width:25%;vertical-align:middle">
+			<img src="images/Thesis_MA_tinywow.png" alt="clean-usnob" width="160" height="114">
+		</td>
+		<td width="100%" valign="middle">              
+			<p><i>Artificial Neural Networks for Learning Forward and Inverse Kinematics of Tubular Continuum Robots</i></p>
+              		<p>Supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof. Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+			<p>Master’s thesis</p>
+		</td>
+	</tr>
 	<!-- Bachelorarbeit -->			
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
