--- a/index.html
+++ b/index.html
@@ -466,18 +466,7 @@
           </tr>
         </tbody></table>
 
-        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
-	<!-- Masterarbeit -->			
-	<tr>
-		<td style="padding:20px;width:25%;vertical-align:middle">
-		<img src="images/Thesis_MA_tinywow.png"  alt="clean-usnob" width="160" height="114">
-	</td>
-            <td width="100%" valign="middle">
-              <p><i>Artificial Neural Networks for Learning Forward and Inverse Kinematics of Tubular Continuum Robots</i></p>
-              <p>Supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof. Dr.-Ing. Jessica Burgner-Kahrs</a></p>
-              <p>Master’s thesis</p>
-            </td>
-          </tr>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 	<!-- Masterarbeit -->
 	<tr>
 		<td style="padding:20px;width:25%;vertical-align:middle">
