--- a/index.html
+++ b/index.html
@@ -366,29 +366,23 @@
 
                 </tbody>
             </table>
-
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                <!-- LAST PART -->
-                <tbody>
-
-                <tr>
-                    <td style="padding:0px">
-                        <br>
-                        <p style="text-align:left;font-size:small;">
-                            The page was designed to last. See the <a
-                                href="https://jeffhuang.com/designed_to_last/">Manifesto for Preserving Content on
-                            the Web</a> by Jeff Huang for more information.
-                            <br>
-                            Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website.
-                        </p>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
-
         </td>
     </tr>
+
+    <!-- FOOTER -->
+    <tfoot>
+    <tr>
+        <td style="padding:0px">
+            <p style="text-align:left;font-size:small;color:#808080;">
+                The page was designed to last. See the <a
+                    href="https://jeffhuang.com/designed_to_last/">Manifesto for Preserving Content on
+                the Web</a> by Jeff Huang for more information.
+                <br>
+                Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website.
+            </p>
+        </td>
+    </tr>
+    </tfoot>
 </table>
 </body>
 
