add links to pdf files

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <br>
                         <em>IEEE/RAS IROS</em>, 2022
                         <br>
-                        <a href="https://openreview.net/pdf?id=DW9uz_GZ0og">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_et_al_IROS_2022.pdf">paper</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
                         /
@@ -151,6 +151,8 @@
                         <br>
                         <em>IEEE ICRA</em>, 2021
                         <br>
+                        <a href="paper/LiangBurgner-Kahrs_et_al_ICRA_2021.pdf">paper</a>
+                        /
                         <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">IEEE Xplore</a>
                         /
                         <a href="data/LiangBurgner-Kahrs_et_al_ICRA_2021.bib">BibTex</a>
