--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
                         <a href="http://roboticsproceedings.org/rss15/p17.html">RSS XV</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_RSS_2019.bib">BibTex</a>
+                        /
+                        <a href="paper/GrassmannBurgner-Kahrs_RSS_2019_Poster.pdf">Poster</a>
                         <p>We investigate the influence of different joint space and orientation representations on the
                             approximation of the forward kinematics.</p>
                     </td>
