Add author's version of both IROS paper

--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
                         <br>
                         <em>IEEE/RSJ IROS</em>, 2018
                         <br>
+                        <br><a href="paper/GrassmannJohannsmeierHaddadin_IROS_2018.pdf">paper</a>
+                        /
                         <a href="https://doi.org/10.1109/IROS.2018.8594339">IEEE Xplore</a>
                         /
                         <a href="data/GrassmannJohannsmeierHaddadin_IROS_2018.bib">BibTex</a>
@@ -296,7 +298,8 @@
                         <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE/RSJ IROS</em>, 2018
-                        <br>
+                        <br><a href="paper/GrassmannModesBurgner-Kahrs_IROS_2018.pdf">paper</a>
+                        /
                         <a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>
                         /
                         <a href="data/GrassmannModesBurgner-Kahrs_IROS_2018.bib">BibTex</a>
