--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a>Priyanka Rao</a>,
-                        <a>Quentin Peyron</a>,
+                        <a href="https://scholar.google.com/citations?user=0rQBVRQAAAAJ">Priyanka Rao</a>,
+                        <a href="https://scholar.google.com/citations?user=IvJpoQcAAAAJ">Quentin Peyron</a>,
                         <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>Frontiers in Robotics and AI</em>, 2022
@@ -144,9 +144,9 @@
                             </papertitle>
                         </a>
                         <br>
-                        <a>Nan Liang</a>
+                        <a href="https://scholar.google.ca/citations?user=0h1At3cAAAAJ">Nan Liang</a>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a>Sven Lilge</a>,
+                        <a href="https://scholar.google.ca/citations?user=Hp2dORMAAAAJ">Sven Lilge</a>,
                         <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE ICRA</em>, 2021
@@ -173,8 +173,8 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a>Sven Lilge</a>,
-                        <a>Phuong Le</a>,
+                        <a href="https://scholar.google.ca/citations?user=Hp2dORMAAAAJ">Sven Lilge</a>,
+                        Phuong Le,
                         <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IFRR RSS Workshop on Retrospectives in Robotics</em>, 2020
@@ -265,8 +265,8 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a>Lars Johannsmeier</a>,
-                        <a>Sami Haddadin</a>
+                        <a href="https://scholar.google.ca/citations?user=cLa2JooAAAAJ">Lars Johannsmeier</a>,
+                        <a href="https://scholar.google.ca/citations?user=H1v0ztEAAAAJ">Sami Haddadin</a>
                         <br>
                         <em>IEEE/RSJ IROS</em>, 2018
                         <br>
@@ -294,7 +294,7 @@
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
-                        <a>Vincent Modes</a>,
+                        Vincent Modes,
                         <a href="https://crl.utm.utoronto.ca/jbk.html">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE/RSJ IROS</em>, 2018
