fixed links to RSS 2019 paper via doi

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                              width="160">
                     </td>
                     <td valign="middle" width="100%">
-                        <a href="https://reinhardgrassmann.github.io/">
+                        <a href="https://doi.org/10.15607/RSS.2019.XV.017">
                             <papertitle>On the Merits of Joint Space and Orientation Representations in Learning the
                                 Forward Kinematics in SE(3)
                             </papertitle>
